# geograficke-informacni-systemy

./: .gitignore  README.md  index.html  main.cpp
cpp/: CMakeLists.txt
python/: tutorial_7.py  tutorial_8.py
